[package]
name = "dungeons_and_servers"
version = "0.1.0"
authors = ["Adithya Chari <adithya.chari@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = {version = "*", default_features = false, features = ["json", "uuid"]}
uuid = { version = "0.8", features = ["serde", "v4"] }